reorganised vectors section

--- a/vectors.Rmd
+++ b/vectors.Rmd
@@ -20,7 +20,7 @@ source("knitr_tweaks.R")
 
 When I introduced [variables](./variables.html) earlier, I showed you how we can use them to store a single number. In this section, we’ll extend this idea and look at how to store multiple numbers within the one variable. In R the name for a variable that can store multiple values is a **vector**. So let’s create one.
 
-## Creating vectors
+## Character vectors
 
 Let's return to the example we were working with in the previous section on variables. We're designing a survey, and we want to keep track of the responses that a participant has given. This time, let's imagine that we've finished running the survey and we're examining the data. Suppose we've administered the [Depression, Anxiety and Stress Scale](http://www2.psy.unsw.edu.au/dass/) (DASS) and as a consequence every participant has scores for on the *depression*, *anxiety* and *stress* scales provided by the DASS. One thing we might want to do is create a single variable called `scale_name` that identifies the three scales. The simplest way to do this in R is to use the *combine* function, `c`.^[Notice that I didn’t specify any argument names here. The `c` function is one of those cases where we don’t use names. We just type all the numbers, and R just dumps them all in a single variable.] To do so, all we have to do is type the values we want to store in a comma separated list, like this
 
@@ -37,6 +37,10 @@ length(scale_name)
 class(scale_name)
 ```
 
+
+## Numeric vectors
+
+
 As you might expect, we can define numeric or logical variables in the same way. For instance, we could define the raw scores on the three DASS scales like so:
 
 ```{r}
@@ -44,7 +48,9 @@ raw_score <- c(12, 3, 8)
 raw_score
 ```
 
-## Extracting elements
+We'll talk about logical vectors in a moment. 
+
+## Extracting an element
 
 If I want to extract the first element from the vector, all I have to do is refer to the relevant numerical index, using square brackets to do so. For example, to get the first element of `scale_name` I would type this
 ```{r}
@@ -54,7 +60,42 @@ The second element of the vector is
 ```{r}
 scale_name[2]
 ```
-You get the idea^[Note that the square brackets here are used to index the elements of the vector, and that this is the same notation that we see in the R output. That's not accidental: when R prints `[1] "depression"` to the screen what it's saying is that `"depression"` is the first element of the output. When the output is long enough, you'll often see other numbers at the start of each line of the output.]
+You get the idea.^[Note that the square brackets here are used to index the elements of the vector, and that this is the same notation that we see in the R output. That's not accidental: when R prints `[1] "depression"` to the screen what it's saying is that `"depression"` is the first element of the output. When the output is long enough, you'll often see other numbers at the start of each line of the output.]
+
+
+
+## Extracting multiple elements
+
+There are a few ways to extract multiple elements of a vector. The first way is to specify a vector that contains the indices of the variables that you want to keep. To extract the first two scale names:
+```{r}
+scale_name[c(1,2)]
+```
+Alternatively, R provides a convenient shorthand notation in which `1:2` is a vector containing the nubmers from 1 to 2, and similarly `1:10` is a vector containing the numbers from 1 to 10. So this is also the same:
+```{r}
+scale_name[1:2]
+```
+
+Notice that order matters here. So if I do this
+
+```{r}
+scale_name[c(2,1)]
+```
+
+I get the same numbers, but in the reverse order.
+
+## Removing elements
+
+Finally, when working with vectors, R allows us to use negative numbers to indicate which elements to remove. So this is yet another way of doing the same thing:
+```{r}
+scale_name[-3]
+```
+
+Notice that done of this has changed the original variable. The `scale_name` itself has remained completely untouched.
+
+```{r}
+scale_name
+```
+
 
 ## Editing vectors
 
@@ -131,62 +172,43 @@ I’ll talk more about calculations involving vectors later, because they come u
 
 ## Logical vectors
 
-The next thing to mention is that you can store vectors of logical values in exactly the same way that you can store vectors of numbers  and vectors of text data. Again, we can define them directly via the `c` function. Logical vectors can be useful as data in their own right, but the thing that they're expecially useful for is extracting elements of another vector (known as *logical indexing*)
+I mentioned earlier that we can define vectors of logical values in the same way that we can store vectors of numbers and vectors of text, again using the `c` function to combine multiple values. Logical vectors can be useful as data in their own right, but the thing that they're expecially useful for is extracting elements of another vector, which is referred to as *logical indexing*.
 
-Here's a simple example. Suppose I am of the opinion that the stress scale is not very useful for my study. I only want to retain the first two elements, deprression and anxiety. There are several ways to do this. To do it using logical indexing, I would define a logical vector like this
+Here's a simple example. Suppose I decide that the stress scale is not very useful for my study, and I only want to keep the first two elements, depression and anxiety. One way to do this is to define a logical vector that indicates which values to `keep`:
 
 ```{r}
 keep <- c(TRUE, TRUE, FALSE) 
 keep
 ```
 
-The `keep` vector here tells me that it is `TRUE` that I want to retain the first two elements, and `FALSE` that I want to keep the third. So if I type this
+In this instance the `keep` vector indicates that it is `TRUE` that I want to retain the first two elements, and `FALSE` that I want to keep the third. So if I type this
 
 ```{r}
 corrected_score[keep]
 ```
 
-the result is just the corrected scores for the two variables (depression and anxiety) that I'm actually interested in. Note that this hasn't created a new variable, however. If I print out the original vector, I see that it hasn't actually changed:
+R prints out the corrected scores for the two variables only. As usual, note that this hasn't changed the original variable. If I print out the original vector...
 
 ```{r}
 corrected_score
 ```
 
-If I want to create a new variable I need to explicitly assign the results of my previous command to a variable. Let's suppose that I want to call the new variable `short_score`, indicating that I've only retained some of the scales. Here's how I do that:
+... all three values are still there. If I *do* want to create a new variable, I need to explicitly assign the results of my previous command to a variable. 
+
+Let's suppose that I want to call the new variable `short_score`, indicating that I've only retained some of the scales. Here's how I do that:
 
 ```{r}
 short_score <- corrected_score[keep]
 short_score
 ```
 
+## Comment
 
-## More ways to index
-
-Finally, I should note that we can there are other ways to extract multiple elements of a vector. One way to do that is to specify a vector that contains the indices of the variables that you want to keep. For instance, if I want to keep the first two elements:
-```{r}
-corrected_score[c(1,2)]
-```
-Alternatively, R provides a convenient shorthand notation in which `1:2` is a vector containing the nubmers from 1 to 2, and similarly `1:10` is a vector containing the numbers from 1 to 10. So this is also the same:
-```{r}
-corrected_score[1:2]
-```
-Finally, when working with vectors, R allows us to use negative numbers to indicate which elements to remove. So this is yet another way of doing the same thing:
-```{r}
-corrected_score[-3]
-```
-
-Notice that order matters here. So if I do this
-
-```{r}
-corrected_score[c(2,1)]
-```
-
-I get the same numbers, but in the reverse order.
-
+At this point, I hope you can see why logical indexing is such a useful thing. It’s a very basic, yet very powerful way to manipulate data. For intance, I might want to extract the scores of the adult participants in a study, which would probably involve a command like `scores[age > 18]`. The operation `age > 18` would return a vector of `TRUE` and `FALSE` values, and so the the full command `scores[age > 18]` would return only the `scores` for participants with `age > 18`. It does take practice to become completely comfortable using logical indexing, so it’s a good idea to play around with these sorts of commands. Practice makes perfect, and it’s only by practicing logical indexing that you’ll perfect the art of yelling frustrated insults at your computer.
 
 ## Exercises
 
-At this point, I hope you can see why logical indexing is such a useful thing. It’s a very basic, yet very powerful way to manipulate data. We’ll talk a lot more about how to manipulate data in a later chapter, since it’s a critical skill for real world research that is often overlooked in introductory research methods classes (or at least, that’s been my experience). It does take a bit of practice to become completely comfortable using logical indexing, so it’s a good idea to play around with these sorts of commands. Try creating a few different variables of your own, and then ask yourself questions like “how do I get R to spit out all the elements that are [blah]”. For instance, I might create vectors with the genders and ages of diffent people
+Try creating a few different variables of your own, and then ask yourself questions like “how do I get R to spit out all the elements that are [blah]”. For instance, I might create vectors with the genders and ages of diffent people
 
 ```{r}
 age <- c(19, 34, 7, 67)
@@ -195,4 +217,3 @@ gender <- c("male","female","female","female")
 
 Create a logical vector `adult` that indicates whether each participant was over the age of 18, and then use it to print out the `gender` of all the adult participants. 
 
-Getting the hang of indexing takes a bit of time. Practice makes perfect, and it’s only by practicing logical indexing that you’ll perfect the art of yelling frustrated insults at your computer.
