--- a/index.Rmd
+++ b/index.Rmd
@@ -20,6 +20,9 @@ I've set this up as an introductory resource for psychology students taking my *
 
 The content borrows heavily from my introductory statistics lecture notes ([Learning Statistics with R](https://compcogscisydney.org/learning-statistics-with-r/)), but they're not quite equivalent, and over time the two are likely to part ways. I wrote *Learning Statistics with R* to accompany an introductory statistics class that I taught from 2011 to 2015, and the intended audience for that book is a psych student taking their first research methods class. This resource is a little different -- it's aimed at someone who has already taken an introductory research methods class of some kind, but would like to learn how to use the R programming language for their data analysis, or for any of a number of other possible tasks. 
 
+<img src="./img/splash_turtle.png" width=200px style="float:right">
+
+
 It is of course a work in progress, but hopefully it is useful!
 
 -[Danielle](d.navarro@unsw.edu.au)
@@ -37,6 +40,7 @@ It is of course a work in progress, but hopefully it is useful!
 - [Functions](./functions.html)
 - [Programming](./programming.html)
 - [File system](./file-system.html)
+
 
 ## Part 2: Working with data
 
