--- a/branches.Rmd
+++ b/branches.Rmd
@@ -2,6 +2,8 @@
 title: "8. Conditional branching"
 output:
   html_document:
+    includes:
+      in_header: header.html    
     toc: true
     toc_float: true
     theme: flatly
