--- a/file-system.Rmd
+++ b/file-system.Rmd
@@ -2,6 +2,8 @@
 title: "11. The File System"
 output:
   html_document:
+    includes:
+      in_header: header.html    
     toc: true
     toc_float: true
     theme: flatly
