--- a/packages.Rmd
+++ b/packages.Rmd
@@ -2,6 +2,8 @@
 title: "4. Packages"
 output:
   html_document:
+    includes:
+      in_header: header.html
     toc: true
     toc_float: true
     theme: flatly
