--- a/programming.Rmd
+++ b/programming.Rmd
@@ -2,6 +2,8 @@
 title: "10. Programming"
 output:
   html_document:
+    includes:
+      in_header: header.html
     toc: true
     toc_float: true
     theme: flatly
