--- a/variables.Rmd
+++ b/variables.Rmd
@@ -2,6 +2,8 @@
 title: "2. Variables"
 output:
   html_document:
+    includes:
+      in_header: header.html    
     toc: true
     toc_float: true
     theme: flatly
