--- a/vectors.Rmd
+++ b/vectors.Rmd
@@ -2,6 +2,8 @@
 title: "6. Vectors"
 output:
   html_document:
+    includes:
+      in_header: header.html    
     toc: true
     toc_float: true
     theme: flatly
