--- a/xx-describing-data.Rmd
+++ b/xx-describing-data.Rmd
@@ -1,7 +1,9 @@
 ---
-title: "Chapter 7. Describing Data"
+title: "Describing Data"
 output:
   html_document:
+    includes:
+      in_header: header.html    
     toc: true
     toc_float: true
     theme: flatly
@@ -9,7 +11,7 @@ output:
     css: mystyle.css
     number_sections: true
     pandoc_args: [
-      "--number-offset", 7
+      "--number-offset", 99
     ]
 ---
 
