--- a/xx-shiny.Rmd
+++ b/xx-shiny.Rmd
@@ -1,7 +1,9 @@
 ---
-title: "Chapter 10. Shiny Web Applications"
+title: "Shiny Web Applications"
 output:
   html_document:
+    includes:
+      in_header: header.html    
     toc: true
     toc_float: true
     theme: flatly
@@ -9,7 +11,7 @@ output:
     css: mystyle.css
     number_sections: true
     pandoc_args: [
-      "--number-offset", 10
+      "--number-offset", 99
     ]
 ---
 
