--- a/xx-visualising-data.Rmd
+++ b/xx-visualising-data.Rmd
@@ -1,7 +1,9 @@
 ---
-title: "Chapter 6. Visualising Data"
+title: "Visualising Data"
 output:
   html_document:
+    includes:
+      in_header: header.html    
     toc: true
     toc_float: true
     theme: flatly
@@ -9,7 +11,7 @@ output:
     css: mystyle.css
     number_sections: true
     pandoc_args: [
-      "--number-offset", 6
+      "--number-offset", 99
     ]
 ---
 
